--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>1st Project on git</h1>
+    <img src="images/nature1.jpeg" alt="">
     <p>
         Lorem ipsum dolor sit amet consectetur
          adipisicing elit. Consequatur, magni 
@@ -15,5 +16,6 @@
           rem similique ipsum vitae fugit iure minima
            aliquam!
     </p>  
+    
 </body>
 </html>
